src/objects/Borrowed_Book__c.object
<CustomObject>
    <description>This has one to many relationship between Library Member and books.  Contains the data of books borrowed by the library member</description>
    <fields>
        <fullName>Actual_Returned_Date__c</fullName>
        <label>Actual Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_Author__c</fullName>
        <formula>Book_ID__r.Author__c</formula>
        <label>Book Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_ID__c</fullName>
        <description>Foreign Key from the BOOKS table (Books_ID).</description>
        <label>Book ID</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Borrowed_Books</relationshipLabel>
        <relationshipName>Borrowed_Books</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Borrowed_Date__c</fullName>
        <label>Borrowed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_First_Name__c</fullName>
        <formula>Member_ID__r.Member_First_Name__c</formula>
        <label>Member First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Borrowed_Books</relationshipLabel>
        <relationshipName>Borrowed_Books</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <formula>Borrowed_Date__c + 15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returned</label>
        <type>Checkbox</type>
    </fields>
    <label>Borrowed Book</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Book_Author__c</columns>
        <columns>Member_First_Name__c</columns>
        <columns>Book_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Borrowed Book  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Borrowed_Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Borrowed_date_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Borrowed_Date__c )</errorConditionFormula>
        <errorDisplayField>Borrowed_Date__c</errorDisplayField>
        <errorMessage>Borrowed date cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_Borrowed_Books_exceeded</fullName>
        <active>true</active>
        <errorConditionFormula>Member_ID__r.No_Of_Books__c &lt; 4</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Number of borrowed books exceeded the limit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Return_Date</fullName>
        <active>true</active>
        <description>Actual Return Date can’t be less than Borrowed Date</description>
        <errorConditionFormula>Actual_Returned_Date__c  &lt;  Borrowed_Date__c</errorConditionFormula>
        <errorDisplayField>Actual_Returned_Date__c</errorDisplayField>
        <errorMessage>Returned date cannot be less than the Borrowed date</errorMessage>
    </validationRules>
</CustomObject>